--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
             <th>Email</th>
             <th>Password</th>
             <th>Birthdate</th>
+            <th>Accepted terms?</th>
           </tr>
         </thead>
         <tbody id="tableBody">
@@ -47,3 +48,4 @@
     <script src="index.js"></script>
   </body>
 </html>
+
